--- a/index.html
+++ b/index.html
@@ -18,7 +18,33 @@
 
 <h1>Mini Form</h1>
 <!-- VOTRE FORMULAIRE -->
-<script src="js/main.js"></script>
+
+<form action="https://kode.ch/getpost/" method="post">
+    <ul class="form">
+        <li>
+    <label for="email">E-mail</label>
+    <input id="email" type="email" name="email">
+        </li>
+    <li>
+    <label for="password"> Mot de passe</label>
+    <input id="password" type="password" name="mdp">
+    <button>Mot de passe</button>
+    </li>
+        <li>
+    <label for="mdpc"> Confirmer mot de passe</label>
+    <input id="mdpc" type="password" name="mdpc">
+    <button>Confirmer mot de passe</button>
+        </li>
+        <li>
+        <button>Créer un compte</button>
+        </li>
+    </ul>
+
+</form>
+
+<script src="js/main.js">
+
+</script>
 </body>
 </html>
 
