ajout required et autofocus

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <ul class="form">
         <li>
     <label for="email">E-mail</label>
-    <input id="email" type="email" name="email">
+    <input id="email" type="email" name="email" autofocus required>
         </li>
     <li>
     <label for="password"> Mot de passe</label>
