--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <ul class="form">
         <li>
     <label for="email">E-mail</label>
-    <input id="email" type="email" name="email" autofocus required>
+    <input id="email" type="email" name="email"
+           placeholder="nom.prenom@esig.com"
+           autofocus required>
         </li>
     <li>
     <label for="password"> Mot de passe</label>
