--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
 <form action="https://kode.ch/getpost/" method="post">
     <ul class="form">
         <li>
+            <label for="background">Arrière-plan</label>
+            <select name="background" id="background">
+
+
+                <option value="1.jpg">Arrière-plan 1</option>
+                <option value="2.jpg">Arrière-plan 2</option>
+                <option value="3.jpg">Arrière-plan 3</option>
+                <option value="4.jpg">Arrière-plan 4</option>
+                <option value="5.jpg">Arrière-plan 5</option>
+                <option value="6.jpg" selected>Arrière-plan 6</option>
+                <option value="7.jpg">Arrière-plan 7</option>
+                <option value="8.jpg">Arrière-plan 8</option>
+                <option value="9.jpg">Arrière-plan 9</option>
+                <option value="10.jpg">Arrière-plan 10</option>
+            </select>
+        </li>
+
+        <li>
     <label for="email">E-mail</label>
     <input id="email" type="email" name="email"
            placeholder="nom.prenom@esig.com"
