--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
                 <option value="10.jpg">Arrière-plan 10</option>
             </select>
         </li>
+        <li>
+            <fieldset>
+                <legend>Genre</legend>
+                <label>
+                    <input type="radio" name="genre" value="h">
+                        Hommes
+                </label>
+                <label>
+                    <input type="radio" name="genre" value="f">
+                    Femmes
+                </label>
+
+
+            </fieldset>
+        </li>
 
         <li>
     <label for="email">E-mail</label>
