bouton rester connecté

--- a/index.html
+++ b/index.html
@@ -71,9 +71,17 @@
 
         </li>
         <li>
+        <label>
+            <input type="checkbox" name="connect" value="true">
+            Restez connecter
+        </label>
+
+
+        <li>
         <button>Créer un compte</button>
         </li>
     </ul>
+
 
 </form>
 
