--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </li>
         <li>
         <label>
-            <input type="checkbox" name="connect" value="true">
+            <input type="checkbox" name="connect" >
             Restez connecter
         </label>
 
