--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
            autofocus required>
         </li>
     <li>
-    <label for="password"> Mot de passe</label>
-    <input id="password" type="password" name="mdp">
+    <label for="mdp"> Mot de passe</label>
+    <input id="mdp" type="password" name="mdp">
 
     </li>
         <li>
